force-app/main/default/objects/Commission__c/fields/Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Date__c</fullName>
    <formula>Home_Service__r.Closed_Won_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won Date</label>
    <type>DateTime</type>
</CustomField>