force-app/main/default/objects/Commission__c/fields/Commission_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Created_Date__c</fullName>
    <label>Commission Created Date</label>
    <type>Date</type>
</CustomField>