force-app/main/default/objects/Commission__c/fields/Commission_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid_Amount__c</fullName>
    <label>Commission Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>