force-app/main/default/objects/Commission__c/fields/Dealer_Fees__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fees__c</fullName>
    <formula>Funding__r.Dealer_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>