force-app/main/default/objects/Commission__c/fields/Estimated_Commission__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Commission__c</fullName>
    <formula>Personnel__r.Gross_Profit_Percentage__c * Funding__r.Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>