force-app/main/default/objects/Commission__c/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding</label>
    <referenceTo>Funding__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>