force-app/main/default/objects/Commission__c/fields/Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funding_Amount__c</fullName>
    <formula>Funding__r.Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>