force-app/main/default/objects/Commission__c/fields/Sales_MPV__c.field-meta.xml
<CustomField>
    <fullName>Sales_MPV__c</fullName>
    <formula>Personnel__r.Gross_Profit_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales MPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>