force-app/main/default/objects/Commission__c/recordTypes/Appointment_Setter.recordType-meta.xml
<RecordType>
    <fullName>Appointment_Setter</fullName>
    <active>true</active>
    <label>Appointment Setter</label>
</RecordType>