force-app/main/default/objects/Commission__c/recordTypes/Sales_Rep.recordType-meta.xml
<RecordType>
    <fullName>Sales_Rep</fullName>
    <active>true</active>
    <label>Sales Rep</label>
</RecordType>