force-app/main/default/objects/Commission__c/validationRules/Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(Commission_Status__c, &quot;Pending&quot;) || ISPICKVAL(Commission_Status__c, &quot;Pending Approval&quot;)) &amp;&amp; Paid__c</errorConditionFormula>
    <errorDisplayField>Paid__c</errorDisplayField>
    <errorMessage>Commission Status must be Approved to change it to Paid</errorMessage>
</ValidationRule>