force-app/main/default/objects/Commission__c/validationRules/Pending_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Pending_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Commission_Status__c, &quot;Pending&quot;) &amp;&amp;
Approved__c</errorConditionFormula>
    <errorDisplayField>Approved__c</errorDisplayField>
    <errorMessage>Commission Status must be Pending Approval to change it to Approved</errorMessage>
</ValidationRule>