force-app/main/default/objects/Commission__c/listViews/Aqua_Bright.listView-meta.xml
<ListView>
    <fullName>Aqua_Bright</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Water</value>
    </filters>
    <label>Aqua Bright</label>
</ListView>